--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- index.html of linktree.bauska.org -->
+<!-- index.html of linkTree.bauska.org -->
 <html lang="en">
 
 <head>
@@ -9,11 +9,11 @@
     initial-scale=1.0" />
   <title>Linktree</title>
   <script type="module" defer 
-    src="./js/main.js">
+    src="./JS/main.js">
   </script>
 
   <link rel="stylesheet" 
-    href="./css/main.css" />
+    href="./CSS/main.css" />
 </head>
 <body>
   <main>
