--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     initial-scale=1.0" />
   <title>Linktree</title>
   <script type="module" defer 
-    src="./JS/main.js">
+    src="./js/main.js">
   </script>
 
   <link rel="stylesheet" 
-    href="./CSS/main.css" />
+    href="./css/main.css" />
 </head>
 <body>
   <main>
